syntax = "proto3";
package c4echain.cfedistributor;

import "gogoproto/gogo.proto";
import "c4echain/cfedistributor/sub_distributor.proto";

option go_package = "github.com/chain4energy/c4e-chain/x/cfedistributor/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  repeated SubDistributor sub_distributors = 1 [
    (gogoproto.nullable) = false
  ];
}