syntax = "proto3";
package c4echain.cfesignature;

import "gogoproto/gogo.proto";
import "c4echain/cfesignature/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/chain4energy/c4e-chain/x/cfesignature/types";

// GenesisState defines the cfesignature module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
